@@ -1,3 +1,4 @@
+2018-03-28 Version 1.64.0: Remove cURL dependency
 2018-03-17 Version 1.63.0: Support for TLS 1.3
 2018-03-06 Version 1.62.0: Support for LibreSSL
 2018-01-19 Version 1.61.0: Fixed a bug handling more than one OCSP host
